[tool.poetry]
name = "PubMed Tools"
version = "0.1.0"
description = "MEDLINE/PubMed processing resources"
authors = ["Julien Tourille <julien.tourille@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
joblib = "^1.0.1"
lxml = "^4.6.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"
pre-commit = "^2.11.1"

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
